# errorsense

./: .gitignore  LICENSE  README.md  pyproject.toml
design/: ERRORSENSE.md
errorsense/: __init__.py  engine.py  llm.py  models.py  phase.py  ruleset.py  signal.py  skill.py
errorsense/presets/: __init__.py  http_gateway.py
errorsense/skills/: http_classifier.md  reclassification.md
tests/: test_engine.py  test_llm.py  test_llm_config.py  test_ruleset.py  test_signal.py  test_tracker.py
