[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "errorsense"
version = "0.1.0"
description = "Error classification engine. Rules for the obvious, AI for the ambiguous."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Can", email = "can@opengpu.network" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Monitoring",
]
keywords = ["error-classification", "circuit-breaker", "observability", "llm"]

[project.optional-dependencies]
llm = ["httpx>=0.25"]

[project.urls]
Homepage = "https://github.com/OpenGPU-Network/errorsense"
Documentation = "https://github.com/OpenGPU-Network/errorsense#readme"

[tool.pytest.ini_options]
asyncio_mode = "auto"
